--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   </head>
   <body>
     <textarea id="source">
+class: middle, center
 
+# http://bit.ly/enterjs-2017
+## PRs welcome at ashleygwilliams/enterjs-2017
+
+---
 class: middle, center
 
 # hi, my name is @ag_dubs
@@ -481,6 +486,80 @@ class: middle, center
 ---
 class: middle, center
 
+![](public/img/capitalism1.PNG)
+
+---
+class: middle, center
+
+![](public/img/capitalism2.PNG)
+---
+class: middle, center
+
+![](public/img/capitalism3.PNG)
+---
+class: middle, center
+
+![](public/img/capitalism4.PNG)
+---
+class: middle, center
+
+![](public/img/capitalism5.PNG)
+---
+class: middle, center
+
+# open source is an amazing way to reduce operating costs
+
+---
+class: middle, center
+
+# enterprise companies report epic ROI on using open source software
+
+---
+class: middle, center
+
+# mostly because, duh, the I is way less
+
+---
+class: middle, center
+
+# MOST PEOPLE DO NOT GET PAID TO WRITE OPEN SOURCE
+
+---
+class: middle, center
+
+# in a certain way, they pay with their lives
+--
+
+# RIP jim, RIP joe
+
+---
+class: middle, center
+
+# most developers consider open source a gift of their time
+
+---
+class: middle, center
+
+![](public/img/githubgraph.png)
+
+---
+class: middle, center
+
+# most people need to sell basically all their time to live
+
+---
+class: middle, center
+
+# so this system doesn't work for them
+
+---
+class: middle, center
+
+# and even for those who "could" work in a system like this...
+
+---
+class: middle, center
+
 # there are so many burnout stories
 
 ---
@@ -628,11 +707,36 @@ class: middle, center
 ---
 class: middle, center
 
+# remember this?
+![again](public/img/again.png)
+
+---
+class: middle, center
+
+# moderation was STILL a mess
+
+---
+class: middle, center
+
 # most things don't get better
 
 --
 
 # but the things that do are really worth it
+
+---
+class: middle, center
+
+# node needs to get better so that everyone can participate
+
+---
+class: middle, center
+
+# because in order to succeed, node needs everyone's help
+
+--
+
+# and not everyone is here
 
 ---
 class: middle, center
