--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ class: middle, center
 class: middle, center
 
 # content warning: 
-# harrassment, suicide, depression
+# harrassment, suicide, depression, burnout, death
 
 ---
 class: middle, center
@@ -57,7 +57,7 @@ class: middle, center
 ---
 class: middle, center
 
-![weekly downloads](public/img/2billion.png)
+![weekly downloads](public/img/2billion.jpg)
 
 ---
 class: middle, center
@@ -204,6 +204,16 @@ class: middle, center
 class: middle, center
 
 ![move fast](public/img/movefast.png)
+
+---
+class: middle, center
+
+![](public/img/snellcomment.png)
+
+---
+class: middle, center
+
+![](public/img/spanishinquisition.png)
 
 ---
 class: middle, center
@@ -475,6 +485,59 @@ class: middle, center
 # no apologies to the company facebook
 
 ---
+class: middle, center
+
+![fartbook](public/img/fartbook1.JPG)
+
+---
+class: middle, center
+
+![fartbook](public/img/fartbook2.JPG)
+
+---
+class: middle, center
+
+![fartbook](public/img/fartbook3.JPG)
+
+---
+class: middle, center
+
+![fartbook](public/img/fartbook5.JPG)
+
+---
+class: middle, center
+
+![fartbook](public/img/fartbook6.JPG)
+
+---
+class: middle, center
+
+![fartbook](public/img/fartbook7.JPG)
+
+---
+class: middle, center
+
+![fartbook](public/img/fartbook8.JPG)
+
+---
+class: middle, center
+
+![fartbook](public/img/fartbook9.JPG)
+
+---
+class: middle, center
+
+![fartbook](public/img/fartbook10.JPG)
+
+---
+class: middle, center
+
+![fartbook](public/img/fartbook11.JPG)
+
+---
+class: middle, center
+
+![fartbook](public/img/fartbook12.JPG)
 
 ---
 class: middle, center
@@ -610,6 +673,9 @@ class: middle, center
 class: middle, center
 
 # the node community committee
+# https://github.com/nodejs/community-committee
+
+![commcomm](public/img/commcomm.png/)
 
 ---
 class: middle, center
