lol t minus 1 hr

--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@ class: middle, center
 ---
 class: middle, center
 
+# let's talk about something that *isn't* a company
+
+---
+class: middle, center
+
+# let's talk about node
+
+---
+class: middle, center
+
 # node was "born" in 2009
 
 ---
