--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ class: middle, center
 ---
 class: middle, center
 
-# tech is shitty because we haven't done to work to make it not shitty
+# tech is shitty because we haven't done the work to make it not shitty
 
 ---
 class: middle, center
